--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,26 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "description": "Finvesto",
   "main": "index.js",
   "scripts": {
+    "test": "",
     "start": "nodemon index.js"
   },
-  "keywords": [],
   "author": "Atharv Rajmane",
   "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "nodemon": "^3.1.10"
-  },
   "dependencies": {
-    "body-parser": "^2.2.0",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^5.1.0",
-    "mongoose": "^8.16.3",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.1",
+    "nodemon": "^3.1.4",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-jwt": "^4.0.1"
   }
 }
